--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,17 +15,11 @@ jobs:
     - run: script/lint
   build:
     name: Build
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - run: xcrun swift build --verbose
-  test:
-    name: Test
     runs-on: macos-${{ matrix.macos }}
     strategy:
       matrix:
-        sanitizer: [address, thread, undefined]
-        swift: [5.1, 5.2, 5.3, 5.4]
+        # TODO: Add 5.4 once available.
+        swift: [5.1, 5.2, 5.3]
         # The latest version of Xcode that supports each release of Swift.
         # https://developer.apple.com/support/xcode/
         include:
@@ -38,12 +32,27 @@ jobs:
           - swift: 5.3
             xcode: 12.4
             macos: 10.15
-          - swift: 5.4
-            xcode: 12.5
-            macos: 11
+          # - swift: 5.4
+          #   xcode: 12.5
+          #   macos: 11
     steps:
     - uses: actions/checkout@v2
     - run: sudo xcode-select --switch /Applications/Xcode_${{ matrix.xcode }}.app
+    - run: xcrun swift build --verbose
+  test:
+    name: Test
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - run: xcrun swift test --verbose
+  sanitize:
+    name: Sanitize
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        sanitizer: [address, thread, undefined]
+    steps:
+    - uses: actions/checkout@v2
     - run: xcrun swift test --verbose --sanitize=${{ matrix.sanitizer }}
   codecov:
     name: Coverage
