--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,13 +19,10 @@ jobs:
     strategy:
       matrix:
         # TODO: Add 5.4 once available.
-        swift: [5.1, 5.2, 5.3]
+        swift: [5.2, 5.3]
         # The latest version of Xcode that supports each release of Swift.
         # https://developer.apple.com/support/xcode/
         include:
-          - swift: 5.1
-            xcode: 11.3.1
-            macos: 10.15
           - swift: 5.2
             xcode: 11.7
             macos: 10.15
