--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,13 @@ jobs:
     strategy:
       matrix:
         platform: [iOS, macOS, tvOS, watchOS]
-        swift: [5.2, 5.3, 5.4, 5.5-dev]
+        swift: [5.1, 5.2, 5.3, 5.4, 5.5-dev]
         # The latest version of Xcode that supports each release of Swift.
         # https://developer.apple.com/support/xcode/
         include:
+          - swift: 5.1
+            xcode: 11.3.1
+            macos: 10.15
           - swift: 5.2
             xcode: 11.7
             macos: 10.15
@@ -56,7 +59,6 @@ jobs:
       if: ${{ matrix.platform == 'macOS' }}
       run: xcrun swift build --verbose
     - name: Build for ${{ matrix.platform }} with xcodebuild
-      if: ${{ matrix.platform != 'macOS' }}
       run: xcrun xcodebuild build -scheme CombineCloudKit -destination generic/platform=${{ matrix.platform }}
   test:
     name: Test
