--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,6 @@ on:
     branches: [ main ]
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: macos-latest
-    steps:
-    - name: Clone
-      uses: actions/checkout@v2
-    - name: Lint
-      run: script/lint
   build:
     name: Build
     runs-on: macos-${{ matrix.macos }}
@@ -60,31 +52,28 @@ jobs:
       run: xcrun swift build --verbose
     - name: Build for ${{ matrix.platform }} with xcodebuild
       run: xcrun xcodebuild build -scheme CombineCloudKit -destination generic/platform=${{ matrix.platform }}
-  test:
-    name: Test
+  lint-test:
+    name: Lint & Test
     runs-on: macos-latest
+    env:
+      TOOLCHAINS: swift
     steps:
     - name: Clone
       uses: actions/checkout@v2
+    - name: Install Swift 5.4
+      run: |
+        curl -o swift.pkg 'https://swift.org/builds/swift-5.4.1-release/xcode/swift-5.4.1-RELEASE/swift-5.4.1-RELEASE-osx.pkg'
+        sudo installer -pkg swift.pkg -target /
+    - name: Lint
+      run: script/lint
     - name: Test
       run: xcrun swift test --verbose
-  sanitize:
-    name: Sanitize
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        sanitizer: [address, thread, undefined]
-    steps:
-    - name: Clone
-      uses: actions/checkout@v2
-    - name: Sanitize
-      run: xcrun swift test --verbose --sanitize=${{ matrix.sanitizer }}
-  codecov:
-    name: Coverage
-    runs-on: macos-latest
-    steps:
-    - name: Clone
-      uses: actions/checkout@v2
+    - name: Address Sanitizer
+      run: xcrun swift test --verbose --sanitize=address
+    - name: Thread Sanitizer
+      run: xcrun swift test --verbose --sanitize=thread
+    - name: Undefined Behavior Sanitizer
+      run: xcrun swift test --verbose --sanitize=undefined
     - name: Coverage
       run: |
         xcrun swift test --verbose --enable-code-coverage
