.github: exclude watchOS builds with Swift 5.4 or later

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,8 @@ jobs:
     - name: Build for tvOS
       run: xcrun xcodebuild build -scheme CombineCloudKit -destination 'generic/platform=tvOS'
     - name: Build for watchOS
+      # watchOS currently fails to build with a Swift toolchain that is newer than Xcode 12.4.
+      if: ${{ matrix.xcode }}
       run: xcrun xcodebuild build -scheme CombineCloudKit -destination 'generic/platform=watchOS'
   lint-test:
     name: Lint & Test
