--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   build-test:
-    name: Build & Test
+    name: ${{ matrix.action_name }} (${{ matrix.platform }}, Swift ${{ matrix.swift }})
     runs-on: macos-latest
     strategy:
       matrix:
         swift: [5.1, 5.2, 5.3, 5.4]
         platform: [macOS, iOS, tvOS, watchOS]
         action: [build]
-        name: [Build]
+        action_name: [Build]
         # The latest version of Xcode that supports each release of Swift.
         # https://developer.apple.com/support/xcode/
         include:
@@ -29,7 +29,7 @@ jobs:
             pkg: https://swift.org/builds/swift-5.4.1-release/xcode/swift-5.4.1-RELEASE/swift-5.4.1-RELEASE-osx.pkg
             toolchain: swift
             action: test
-            name: Test
+            action_name: Build & Test
     env:
       TOOLCHAINS: ${{ matrix.toolchain }}
     steps:
