.github: use my fork

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         curl -o swift.pkg '${{ matrix.pkg }}'
         sudo installer -pkg swift.pkg -target /
     - name: Build for ${{ matrix.platform }} with xcodebuild
-      uses: mxcl/xcodebuild@v1
+      uses: chris-araman/xcodebuild@tweaks
       with:
         action: build
         platform: ${{ matrix.platform }}
